--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
 
 permissions:
   contents: write
@@ -23,16 +23,18 @@ jobs:
       - run: npx changelogithub
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          
+
       - uses: pnpm/action-setup@v4
+        with:
+          version: 9.7.0
 
       - uses: actions/setup-node@v4
         with:
-            node-version: 20.x
-            registry-url: 'https://registry.npmjs.org'
+          node-version: 20.x
+          registry-url: "https://registry.npmjs.org"
 
       - run: pnpm install
-      
+
       - name: Build
         run: pnpm build
 
